[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Audio/AmbienceDevice.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 826.601, 1214.78 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 477.69, 952.667 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 299.874, 402.111 )

[node name="AmbienceDevice" type="Node2D"]
script = ExtResource( 1 )
max_distance = 150.0

[node name="MaxDistance" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MaxDistance"]
shape = SubResource( 1 )

[node name="AmbZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AmbZone"]
shape = SubResource( 2 )

[node name="FallOffZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallOffZone"]
shape = SubResource( 3 )
